# vela

./: Cargo.toml  README.md  install.sh  mise.toml
.claude/: CLAUDE.md
.claude/rules/: architecture.md  rust-standards.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  cloudflare.md  configuration.md  deploy-lifecycle.md  elixir-phoenix.md  getting-started.md  production-checklist.md
src/: cli.rs  config.rs  health.rs  main.rs
src/client/: mod.rs  ssh.rs
src/server/: acme.rs  backup.rs  deploy.rs  ipc.rs  mod.rs  process.rs  proxy.rs  sandbox.rs  service.rs  state.rs
